loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:7: error: '(' expected but identifier found.
      if nbBiscuit <= 2
         ^